# Saraswati-AI

./: .gitignore  README.md  render.yaml
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  supabase.py
backend/app/routers/: auth.py  chat.py  health.py  messages.py  papers.py  projects.py
backend/app/services/: arxiv_service.py  embedding_service.py  ingestion_service.py  neo4j_service.py  research_agent.py  web_search_service.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/auth/login/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/explore/: page.tsx
frontend/app/dashboard/explore/[projectId]/: page.tsx
frontend/app/dashboard/projects/: page.tsx
frontend/app/dashboard/projects/[id]/canvas/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/components/: AppShell.tsx  Footer.tsx  HeroCards.tsx  Navbar.tsx  PaperCard.tsx  VantaFog.tsx
frontend/components/ui/: draggable-card.tsx
frontend/lib/: api.ts
frontend/lib/supabase/: server.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/types/: index.ts
frontend/types/: vanta.d.ts
